# Simple-Matrix

./: CMakeLists.txt  README.md  matrix.c  matrix.h
docs/: Doxyfile  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  matrix_8h.html  matrix_8h_source.html
docs/search/: all_0.js  all_1.js  defines_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js
